<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="400dp"
        android:layout_height="700dp"
        android:layout_marginTop="10dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/doctor_img" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/to_confirm_patient_info"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/patient_details"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:backgroundTint="@color/light_blue_A700"
                app:cornerRadius="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal"
                android:weightSum="2.4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/patient_name"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/pname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text=": Mg Mg"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal"
                android:weightSum="2.4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="@string/patient_dateOfbirth"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/pdateofBirth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text=": Mg Mg"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal"
                android:weightSum="2.4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/patient_height"
                    android:gravity="center"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/pheight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text=": Mg Mg"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal"
                android:weightSum="2.4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="@string/patient_blood_type"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/pbloodtype"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text=": Mg Mg"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal"
                android:weightSum="2.4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="@string/patient_weight"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/pweight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text=": Mg Mg"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal"
                android:weightSum="2.4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="@string/patient_blood_pressure"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/pbloodpressure"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:padding="5dp"
                    android:text=": Mg Mg"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="horizontal"
                android:weightSum="2.4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="@string/patient_reactionalert"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/p_allegir"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text=": Mg Mg"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/special_question"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:backgroundTint="@color/light_blue_A700"
                app:cornerRadius="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_question_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cs_btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="10dp"
        app:cornerRadius="16dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:text="@string/start_consultation_btn"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:backgroundTint="@color/light_blue_A700"/>

</LinearLayout>
