<?xml version="1.0" encoding="utf-8"?>
<com.padc.patient.views.viewPods.ConsultationRequestViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/margin_medium"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_A700"
            android:layout_margin="@dimen/margin_card_medium"
            android:textSize="@dimen/text_regular_1x"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:text="@string/consultation_message"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_small"
            android:textSize="@dimen/text_regular"
            android:id="@+id/txt_consulation"
            android:text="@string/consultation_request_message"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/margin_small"
                android:src="@drawable/doctor_img"
                android:id="@+id/img_userprofile"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/margin_small"
                    android:id="@+id/txt_doctorname"
                    android:textSize="12sp"
                    android:text="Dr . Mg Mg Win"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_margin="@dimen/margin_small"
                    android:id="@+id/tv_specialityName"
                    android:textSize="12sp"
                    android:text="အရေပြားနှင့် အလှပရေးရာ"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:maxLines="2"
            android:ellipsize="end"
            android:id="@+id/txt_doctor_bigoraphy"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_small"
            android:textSize="12sp"
            android:text="@string/dummy_text_consulation_request"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:id="@+id/tv_startConsultation"
            android:textColor="@color/blue_A700"
            android:layout_margin="@dimen/margin_card_medium"
            android:textSize="14sp"
            android:text="@string/start_consultation"/>
    </LinearLayout>


</com.padc.patient.views.viewPods.ConsultationRequestViewPod>