<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView app:cardElevation="5dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_marginTop="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_medium"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/margin_medium"
            android:textStyle="bold"
            android:text="@string/consulation_request"/>

            <TextView
                android:id="@+id/tv_patient_desc"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="30dp"
                android:text="@string/patient_name"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:layout_marginLeft="@dimen/margin_card_medium_2"
                android:padding="@dimen/margin_medium"
                android:gravity="center"
                android:background="@drawable/rounded_corner_btn_orange"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_600"
            android:layout_marginTop="@dimen/margin_medium"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            >

        <ImageView
            android:id="@+id/iv_patient"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="56dp"
            android:layout_margin="@dimen/margin_large"
            android:layout_height="50dp"
            android:src="@drawable/doctor_img"/>

            <TextView
                android:id="@+id/tv_patientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/iv_patient"
                app:layout_constraintStart_toEndOf="@+id/iv_patient"
                android:layout_marginLeft="@dimen/margin_large"
                android:textSize="16dp"
                android:text="Aung Aung"/>

            <TextView
                android:id="@+id/tv_patientBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/iv_patient"
                app:layout_constraintBottom_toBottomOf="@+id/iv_patient"
                android:text="@string/patient_dateOfbirth"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_large"/>


            <com.google.android.material.button.MaterialButton
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_patient"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_large"
                app:cornerRadius="12dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/red_400"/>

            <com.google.android.material.button.MaterialButton
                app:layout_constraintTop_toBottomOf="@+id/iv_patient"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_large"
                app:cornerRadius="12dp"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="5dp"
                android:text="@string/accept"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/blue_300"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>