<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardElevation="5dp"
    app:cardCornerRadius="20dp"
    android:orientation="vertical"
    android:elevation="5dp"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_medium"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:textStyle="bold"
                android:text="@string/consulation_request"/>

            <TextView
                android:id="@+id/tv_patient_desc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin_card_medium_2"
                android:background="@drawable/rounded_corner_btn_orange"
                android:gravity="center"
                android:padding="@dimen/margin_small"
                android:text="@string/new_patient"
                android:textColor="@color/white"
                android:textSize="8dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_600"
            android:layout_marginTop="@dimen/margin_medium"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_patient"
                android:layout_width="56dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin_large"
                android:src="@drawable/doctor_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_patientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:text="Aung Aung"
                android:textSize="16dp"
                app:layout_constraintStart_toEndOf="@+id/iv_patient"
                app:layout_constraintTop_toTopOf="@+id/iv_patient" />

            <TextView
                android:id="@+id/tv_patientBirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/patient_dateOfbirth"
                app:layout_constraintBottom_toBottomOf="@+id/iv_patient"
                app:layout_constraintStart_toEndOf="@+id/iv_patient" />


            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintTop_toBottomOf="@+id/iv_patient"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_margin="3dp"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    android:background="@drawable/btn_rounded_corner_red"
                    android:id="@+id/btn_skip"
                    android:text="@string/skip"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_margin="3dp"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_rounded_corner_cyan"
                    android:id="@+id/btn_next"
                    android:visibility="gone"
                    android:text="@string/next"
                    android:textSize="10sp"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_margin="3dp"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:background="@drawable/btn_rounded_corner_yellow"
                    android:id="@+id/btn_postPone"
                    android:textSize="10sp"
                    android:text="@string/postpone"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_margin="3dp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_corner_btn_blue"
                    android:id="@+id/btn_accept"
                    android:textSize="10sp"
                    android:text="@string/accept"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
